# Ticket_System

./: CMakeLists.txt  build.sh  conanfile.txt  config.json
src/client/: main.cpp
src/core/: ChangeCalculator.cpp  ChangeCalculator.h  CoinInventory.h  TicketPool.cpp  TicketPool.h
src/server/: main.cpp
tests/: change_calculator_test.cpp  main_test.cpp  ticket_pool_test.cpp
